# news-hub

./: .env.example  .gitignore  Cargo.toml  README.md  TODO.md  config.toml.example
src/: config.rs  lib.rs  main.rs
src/adaptors/: benzinga.rs  mod.rs  rss.rs
src/app/: mod.rs
src/db/: sqlite.rs
src/fetchers/: benzinga.rs  mod.rs  rss.rs
src/models/: filter.rs  mod.rs  news_item.rs
src/ui/: component.rs  mod.rs  status_message.rs
src/ui/components/: detail_pane.rs  mod.rs  news_list.rs  search_bar.rs  status_bar.rs
