[package]
name = "news-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rss = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
toml = "0.9.8"

# ratatui ecosystem
ratatui = "0.26"
crossterm = "0.27"

# SQLite
rusqlite = { version = "0.31", features = ["chrono"] }

# logging
tracing = "0.1"
tracing-subscriber = "0.3"
